--- a/asstes/style.css
+++ b/asstes/style.css
@@ -18,6 +18,17 @@
             font-family: 'IBM Plex Sans Arabic', sans-serif;
             font-weight: 600;
         }
+        p {
+            font-family: 'IBM Plex Sans Arabic', sans-serif;
+            line-height: 1.6;
+            
+        }
+        li a span {
+            font-family: 'IBM Plex Sans Arabic', sans-serif;
+        }
+        *{
+            font-family: 'IBM Plex Sans Arabic', sans-serif;
+        }
         
         .saudi-green { color: var(--saudi-green); }
         .bg-saudi-green { background-color: var(--saudi-green); }
@@ -28,10 +39,15 @@
         .border-gold { border-color: var(--gold); }
         
         .hero-pattern {
-            background-image: 
+            background-image: url('../asstes/img/banner.svg');
+            background-size: cover;
+            background-position: center;    
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            /* background-image: 
                 radial-gradient(circle at 25% 25%, rgba(212, 175, 55, 0.1) 0%, transparent 50%),
                 radial-gradient(circle at 75% 75%, rgba(0, 84, 77, 0.1) 0%, transparent 50%),
-                linear-gradient(45deg, transparent 40%, rgba(212, 175, 55, 0.05) 50%, transparent 60%);
+                linear-gradient(45deg, transparent 40%, rgba(212, 175, 55, 0.05) 50%, transparent 60%); */
         }
         
        
