--- a/asstes/style.css
+++ b/asstes/style.css
@@ -75,12 +75,18 @@
             border-color: var(--gold);
             box-shadow: 0 15px 35px rgba(0, 84, 77, 0.1);
         }
-        
         .navbar-scroll {
-            backdrop-filter: blur(10px);
-            background: rgba(255, 255, 255, 0.95);
+            background: #00544d;
+             
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
+        }
+        .navbar-scroll-all  {
+            color: var(--saudi-green);
         }
         
+       
+        .navbar
         .partner-logo {
             filter: grayscale(1) opacity(0.7);
             transition: all 0.3s ease;
@@ -143,3 +149,9 @@
             transform: translateY(0);
         }
    
+
+
+
+
+
+        
