--- a/asstes/style.css
+++ b/asstes/style.css
@@ -151,7 +151,12 @@
    
 
 
-
+.banner-1{
+    background-image: url('./asstes/img/sign.png');
+    background-size: cover; 
+    background-position: center;
+    background-repeat: no-repeat;
+}
 
 
         /* Partners Slider Styles */
